# Spotify-Web-API

./: README.md  pyproject.toml
.github/workflows/: P2.yml  main.yml
doc/: abstract-logger.md  client.md
doc/auth/: oauth-2-client-credentials-grant.md
doc/controllers/: albums.md  artists.md  audiobooks.md  categories.md  chapters.md  episodes.md  genres.md  markets.md  player.md  playlists.md  search.md  shows.md  tracks.md  users.md
doc/models/: album-base.md  album-group.md  album-object.md  album-restriction-object.md  album-type.md  artist-discography-album-object.md  artist-object.md  audio-analysis-object.md  audio-features-object.md  audiobook-base.md  audiobook-object.md  author-object.md  bad-request-exception.md  categories.md  category-object.md  chapter-base.md  chapter-object.md  chapter-restriction-object.md  context-object.md  copyright-object.md  currently-playing-context-object.md  currently-playing-object.md  cursor-object.md  cursor-paged-artists.md  cursor-paging-object.md  cursor-paging-play-history-object.md  cursor-paging-simplified-artist-object.md  device-object.md  disallows-object.md  episode-base.md  episode-object.md  episode-restriction-object.md  error-object.md  explicit-content-settings-object.md  external-id-object.md  external-url-object.md  followers-object.md  forbidden-exception.md  image-object.md  include-external.md  (+97 more)
spotifywebapi/: __init__.py  configuration.py  spotifywebapi_client.py
spotifywebapi/apis/: __init__.py  albums_api.py  artists_api.py  audiobooks_api.py  base_api.py  categories_api.py  chapters_api.py  (+10 more)
(+148 files in other folders)
